fix z-index issues

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@
   content: '';
   display: none;
   position: absolute;
-  z-index: 9998;
+  z-index: 1;
   bottom: 20px;
   left: 25%;
   width: 0;
@@ -70,7 +70,7 @@
   content: attr(data-tooltip);
   display: none;
   position: absolute;
-  z-index: 9999;
+  z-index: 2;
   bottom: 25px;
   left: -6.5rem;
   width: 14rem;
@@ -94,7 +94,7 @@
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
   background-color: rgba(255,255,255,0.6);
-  z-index: 1;
+  z-index: 3;
 }
 .week-detail {
   position: fixed;
